force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/Regra_de_aprovacao_de_cotacao__c.object-meta.xml
<CustomObject>
    <label>Regra de aprovação de cotação</label>
    <nameField>
        <label>Nome de Regra de aprovação de cotação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regras de aprovação de cotação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>