force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/fields/Alcada__c.field-meta.xml
<CustomField>
    <fullName>Alcada__c</fullName>
    <label>Alçada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendedor</fullName>
            </value>
            <value>
                <fullName>Gerente Regional</fullName>
            </value>
            <value>
                <fullName>Gerente Nacional</fullName>
            </value>
            <value>
                <fullName>Diretor Nacional</fullName>
            </value>
            <value>
                <fullName>Gerente de Linha</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>