force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/fields/Desconto_Maximo__c.field-meta.xml
<CustomField>
    <fullName>Desconto_Maximo__c</fullName>
    <label>Desconto Máximo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>