force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/fields/Juros__c.field-meta.xml
<CustomField>
    <fullName>Juros__c</fullName>
    <label>Juros</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>