force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Desconto</fullName>
            </value>
            <value>
                <fullName>Minimo total</fullName>
            </value>
            <value>
                <fullName>Minimo de parcela</fullName>
            </value>
            <value>
                <fullName>Juros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>