force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/fields/Valor_minimo__c.field-meta.xml
<CustomField>
    <fullName>Valor_minimo__c</fullName>
    <label>Valor mínimo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>