force-app/main/default/objects/Regra_de_aprovacao_de_cotacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Condicao_de_pagamento__c</columns>
    <columns>Linha__c</columns>
    <columns>Tipo__c</columns>
    <columns>Valor_minimo__c</columns>
    <columns>Desconto_Maximo__c</columns>
    <columns>Alcada__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>Entrada</value>
    </filters>
    <label>Tudo</label>
</ListView>